# oopsjedi

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  ecmwf.sh  oopsjedi-config.cmake.in  oopsjedi-import.cmake.in
extension/: CMakeLists.txt
extension/oopsjedi/base/: Geometry.h  Increment.h  IncrementEnsemble.h  ObsVector.h  State.h
extension/oopsjedi/interface/: AnalyticInitBase.h  ErrorCovariance.h  GeoVaLs.h  Geometry.h  GeometryIterator.h  Increment.h  LinearModelBase.h  LinearObsOperator.h  LinearVariableChange.h  LocalInterpolator.h  LocalizationBase.h  ModelAuxControl.h  ModelAuxCovariance.h  ModelAuxIncrement.h  ModelBase.h  ModelData.h  NormGradient.h  ObsAuxControl.h  ObsAuxCovariance.h  ObsAuxIncrement.h  ObsAuxPreconditioner.h  ObsDataVector.h  ObsDataVector_head.h  ObsDiagnostics.h  ObsErrorBase.h  ObsFilterBase.h  ObsOperator.h  ObsSpace.h  ObsVector.h  SampledLocations.h  State.h  VariableChange.h
extension/oopsjedi/util/: LibOOPS.cc  abor1_cpp.h  dot_product.h
